feat: add option to copy short URL in context menu

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <div class="context-item" onclick="openInNetron()">Inspect</div>
         <div class="context-item" onclick="copyGitHash()">Copy GitHash</div>
         <div class="context-item" onclick="copyFileUrl()">Copy File URL</div>
+        <div class="context-item" onclick="copyShortUrl()">Copy Short URL</div>
     </div>
 
     <div id="uniqueModal" class="modal-overlay">
