feat: style overhaul

--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
 
 
     <footer>
-        <a href="https://github.com/whoswhip/aimmy-models">Source</a> ·
-        <a href="https://github.com/whoswhip/aimmy-models/blob/main/search-help.md">Search Help</a> ·
-        <a href="#" id="cfg-onnx"></a> ·
+        <a href="https://github.com/whoswhip/aimmy-models">Source</a>
+        <a href="https://github.com/whoswhip/aimmy-models/blob/main/search-help.md">Search Help</a>
+        <a href="#" id="cfg-onnx"></a>
         <a href="#" id="is-it-unique" onclick="uniqueModal()">Is it unique?</a>
     </footer>
 </body>
 <script src="script.js"></script>
+
 </html>
