--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:url" content="https://github.com/whoswhip/aimmy-models">
 
     <link rel="stylesheet" href="style.css">
+    <script defer src="https://analytics.whoswhip.dev/script.js" data-website-id="c58b9732-79f1-4a4a-81df-2a336aa69041"></script>
 </head>
 
 <body>
