feat: add option to open model links in Discord app

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div class="context-item" onclick="copyShortUrl()">Copy Short URL</div>
         <div class="context-item" onclick="copyModelInfo()">Copy Model Info</div>
         <div class="context-item" onclick="openInDiscord()" id="context-open-in-discord">Open In Discord</div>
+        <div class="context-item" onclick="openInDiscord(true)" id="context-open-in-discord-app">Open In Discord App</div>
     </div>
 
     <div id="uniqueModal" class="modal-overlay">
